# adalm2000-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
skills/adalm2000/: SKILL.md
src/adalm2000_mcp/: backend.py  cli.py  cli_commands.py  iio_backend.py  server.py
src/adalm2000_mcp/tools/: awg.py  device.py  logic.py  pattern.py  psu.py  scope.py
